--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body{
             text-align: center;
-            margin: 0px;
+            margin: 15px;
         }
 
         img {
@@ -25,20 +25,18 @@
         }
 
         hr {
-            margin-bottom: 590px;
+            margin-bottom: 120px;
         }
 
         main {
             height: 450px;
-            width: 600px;
+            max-width: 600px;
             background-color: white;
             text-align: center;
             border-radius: 10px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.356);
-            position: absolute;
-            left: 50%;
-            top: 48%;
-            transform: translate(-50%, -50%);
+            margin: auto;
+            margin-bottom: 80px;
         }
 
         p {
