--- a/index.html
+++ b/index.html
@@ -119,15 +119,6 @@
             if (hora >= 6 && hora < 12) {
                 imagem.innerHTML = '<img src="imagens/manha-recortada.jpg" alt="|"></img>'
                 document.body.style.backgroundColor = '#AEB5BB'
-            } else if (hora >= 12 && hora < 17) {
-                imagem.innerHTML = '<img src="imagens/manha-1-200.jpg" alt="|">  </img>'
-                document.body.style.backgroundColor = '#B9BF99'
-            } else if (hora > 16 && hora < 20) {
-                imagem.innerHTML = '<img src="imagens/tarde.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#B38374'
-            } else {
-                imagem.innerHTML = '<img src="imagens/noite-recortada-02.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#3D7A87'
             }
         }
 
@@ -145,18 +136,9 @@
                 agoraSao.innerText = hora + ':00' + ' horas'
             }
 
-            if (hora >= 6 && hora < 12) {
-                imagem.innerHTML = '<img src="imagens/manha-recortada.jpg" alt="|"></img>'
-                document.body.style.backgroundColor = '#AEB5BB'
-            } else if (hora >= 12 && hora < 17) {
-                imagem.innerHTML = '<img src="imagens/manha-1-200.jpg" alt="|">  </img>'
+            if (hora >= 12 && hora < 17) {
+                imagem.innerHTML = '<img src="imagens/pexels-definitivo.jpg" alt="|">  </img>'
                 document.body.style.backgroundColor = '#B9BF99'
-            } else if (hora > 16 && hora < 20) {
-                imagem.innerHTML = '<img src="imagens/tarde.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#B38374'
-            } else {
-                imagem.innerHTML = '<img src="imagens/noite-recortada-02.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#3D7A87'
             }
         }
 
@@ -174,18 +156,9 @@
                 agoraSao.innerText = hora + ':00' + ' horas'
             }
 
-            if (hora >= 6 && hora < 12) {
-                imagem.innerHTML = '<img src="imagens/manha-recortada.jpg" alt="|"></img>'
-                document.body.style.backgroundColor = '#AEB5BB'
-            } else if (hora >= 12 && hora < 17) {
-                imagem.innerHTML = '<img src="imagens/manha-1-200.jpg" alt="|">  </img>'
-                document.body.style.backgroundColor = '#B9BF99'
-            } else if (hora > 16 && hora < 20) {
+            if (hora > 16 && hora < 20) {
                 imagem.innerHTML = '<img src="imagens/tarde.jpg" alt="">  </img>'
                 document.body.style.backgroundColor = '#B38374'
-            } else {
-                imagem.innerHTML = '<img src="imagens/noite-recortada-02.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#3D7A87'
             }
         }
 
@@ -203,16 +176,7 @@
                 agoraSao.innerText = hora + ':00' + ' horas'
             }
 
-            if (hora >= 6 && hora < 12) {
-                imagem.innerHTML = '<img src="imagens/manha-recortada.jpg" alt="|"></img>'
-                document.body.style.backgroundColor = '#AEB5BB'
-            } else if (hora >= 12 && hora < 17) {
-                imagem.innerHTML = '<img src="imagens/manha-1-200.jpg" alt="|">  </img>'
-                document.body.style.backgroundColor = '#B9BF99'
-            } else if (hora > 16 && hora < 20) {
-                imagem.innerHTML = '<img src="imagens/tarde.jpg" alt="">  </img>'
-                document.body.style.backgroundColor = '#B38374'
-            } else {
+            if (hora == 0) {
                 imagem.innerHTML = '<img src="imagens/noite-recortada-02.jpg" alt="">  </img>'
                 document.body.style.backgroundColor = '#3D7A87'
             }
@@ -231,7 +195,7 @@
             imagem.innerHTML = '<img src="imagens/manha-recortada.jpg" alt="|"></img>'
             document.body.style.backgroundColor = '#AEB5BB'
         } else if (hora >= 12 && hora < 17) {
-            imagem.innerHTML = '<img src="imagens/manha-1-200.jpg" alt="|">  </img>'
+            imagem.innerHTML = '<img src="imagens/pexels-definitivo.jpg" alt="|">  </img>'
             document.body.style.backgroundColor = '#B9BF99'
         } else if (hora > 16 && hora < 20) {
             imagem.innerHTML = '<img src="imagens/tarde.jpg" alt="">  </img>'
